; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/dm/extr_bta_dm_act.c_bta_dm_observe_discard_cb.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/dm/extr_bta_dm_act.c_bta_dm_observe_discard_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 (i32, %struct.TYPE_6__*)* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"bta_dm_observe_discard_cb\00", align 1
@bta_dm_search_cb = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@BTA_DM_INQ_DISCARD_NUM_EVT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @bta_dm_observe_discard_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bta_dm_observe_discard_cb(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__, align 4
  store i32 %0, i32* %2, align 4
  %4 = call i32 @APPL_TRACE_DEBUG(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %5 = load i32, i32* %2, align 4
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  store i32 %5, i32* %7, align 4
  %8 = load i32 (i32, %struct.TYPE_6__*)*, i32 (i32, %struct.TYPE_6__*)** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @bta_dm_search_cb, i32 0, i32 0), align 8
  %9 = icmp ne i32 (i32, %struct.TYPE_6__*)* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i32 (i32, %struct.TYPE_6__*)*, i32 (i32, %struct.TYPE_6__*)** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @bta_dm_search_cb, i32 0, i32 0), align 8
  %12 = load i32, i32* @BTA_DM_INQ_DISCARD_NUM_EVT, align 4
  %13 = call i32 %11(i32 %12, %struct.TYPE_6__* %3)
  br label %14

14:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @APPL_TRACE_DEBUG(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
